[package]
name = "stack_dst"
version = "0.8.0"
authors = [ "John Hodge <tpg@mutabah.net>" ]
description = "A wrapper that allows storage of unsized values of up to a fixed size inline (without boxing)"
repository = "https://github.com/thepowersgang/stack_dst-rs"
documentation = "http://thepowersgang.github.io/stack_dst-rs/target/doc/stack_dst/"
readme = "README.md"
keywords = ["stack", "dst"]
license = "MIT OR Apache-2.0"

[features]
default = ["std", "alloc", "const_generics"]

std = []
alloc = []
unsize = []
const_generics = []
# EXPERIMENTAL
#full_const_generics = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
generic-array = "0.14"
